Added html version for those who do not have jupyter notebook setup.

--- a/getting_started.html
+++ b/getting_started.html
@@ -8048,6 +8048,7 @@ Eyes(left_eye=Circle(center=array([-1.,  0.]), r=0.75), right_eye=Circle(center=
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>Finally, we have an easy way of running a script reproducibly with some helper functions. There is a minimal example in the example folder. When you run <code>sample_run_config_script.py</code> it automatically generates a yaml file in its configured output directory. This yaml file can then be used to rerun the program if it is so chosen.</p>
+<p>We make sure that it is run with command line arguments. If we run it in the command line it is straightfoward.</p>
 </div>
 </div>
 </div>
